src/test/ui/suggestions/issue-52820.stderr
error[E0308]: mismatched types
  --> $DIR/issue-52820.rs:9:9
   |
LL |         guts,
   |         ^^^^
   |         |
   |         expected struct `std::string::String`, found &str
   |         help: try using a conversion method: `guts: guts.to_string()`
   |
   = note: expected type `std::string::String`
              found type `&str`

error[E0308]: mismatched types
  --> $DIR/issue-52820.rs:10:17
   |
LL |         brains: guts.clone(),
   |                 ^^^^^^^^^^^^
   |                 |
   |                 expected struct `std::string::String`, found &str
   |                 help: try using a conversion method: `guts.to_string()`
   |
   = note: expected type `std::string::String`
              found type `&str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
